--- a/assets/front/css/style1.css
+++ b/assets/front/css/style1.css
@@ -35,6 +35,13 @@ a {
 
 }
 
+
+
+.divyang{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .navActive {
 
   border: 1.5px solid #D07531;
