--- a/assets/front/css/style1.css
+++ b/assets/front/css/style1.css
@@ -36,6 +36,31 @@ a {
 }
 
 
+
+.newclass{
+  
+    background-color: #303030;
+  
+    color: white;
+  
+    padding: 10px 20px;
+  
+    border-radius: 30px;
+  
+    font-size: 14px;
+  
+    font-weight: 600;
+  
+    text-transform: uppercase;
+  
+    display: inline-block;
+  
+    margin-top: 20px;
+  
+    cursor: pointer;
+}
+
+
 .navActive {
 
   border: 1.5px solid #D07531;
